# cwlprov-py

./: .coveragerc  MANIFEST.in  Makefile  NOTICE  README.md  ci-tests.yml  cwlprov.py  mypy-requirements.txt  pyproject.toml  release-test.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-tests.yml  codeql-analysis.yml  codeql.yml
cwlprov/: __init__.py  cwl.py  prov.py  ro.py  tool.py  utils.py
cwlprov/context/: bundle.jsonld
mypy-stubs/: bagit.pyi
mypy-stubs/arcp/: __init__.pyi  generate.pyi  parse.pyi
mypy-stubs/bdbag/: __init__.pyi  bdbag_api.pyi  bdbag_cli.pyi  bdbag_config.pyi  bdbag_ro.pyi  bdbag_utils.pyi  bdbagit.pyi  bdbagit_profile.pyi
mypy-stubs/bdbag/fetch/: __init__.pyi  fetcher.pyi
mypy-stubs/bdbag/fetch/auth/: keychain.pyi
mypy-stubs/bdbag/fetch/resolvers/: __init__.pyi  ark_resolver.pyi  base_resolver.pyi  dataguid_resolver.pyi  doi_resolver.pyi
mypy-stubs/bdbag/fetch/transports/: __init__.pyi  base_transport.pyi  fetch_boto3.pyi  fetch_ftp.pyi  fetch_globus.pyi  fetch_http.pyi  fetch_tag.pyi
mypy-stubs/prov/: __init__.pyi  constants.py  constants.pyi  dot.pyi  graph.pyi  identifier.pyi  model.pyi
mypy-stubs/prov/scripts/: compare.pyi  convert.pyi
mypy-stubs/prov/serializers/: __init__.pyi  provjson.pyi  provn.pyi  provrdf.pyi  provxml.pyi
mypy-stubs/rdflib/: __init__.pyi  compare.pyi  compat.pyi  graph.pyi  resource.pyi  term.pyi  void.pyi
mypy-stubs/rdflib/extras/: cmdlineutils.pyi  describer.pyi  external_graph_libs.pyi  infixowl.pyi
mypy-stubs/rdflib/namespace/: _DCMITYPE.pyi  _OWL.pyi  _SDO.pyi  _VANN.pyi
mypy-stubs/rdflib/plugins/parsers/: rdfxml.pyi  trig.pyi  trix.pyi
mypy-stubs/rdflib/plugins/serializers/: jsonld.pyi  longturtle.pyi  n3.pyi  nquads.pyi  rdfxml.pyi  trix.pyi  xmlwriter.pyi
mypy-stubs/rdflib/plugins/sparql/: __init__.pyi  aggregates.pyi  algebra.pyi  datatypes.pyi  evaluate.pyi  evalutils.pyi  parser.pyi  update.pyi
mypy-stubs/rdflib/plugins/stores/: regexmatching.pyi  sparqlconnector.pyi  sparqlstore.pyi
mypy-stubs/rdflib/tools/: graphisomorphism.pyi  rdf2dot.pyi
test/directory-cwlprov-0.6.0/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
test/directory-cwlprov-0.6.0/metadata/: directory-013b143b-c291-4563-92c4-fa89c13748e7.ttl  directory-29362b15-aec5-41da-997a-0fbda3de0f9d.ttl  directory-5bd08ebf-fe7b-4a73-9f0b-b90e6d82effa.ttl  directory-71c91af9-f058-4f5d-9fd2-f95238417ee6.ttl  directory-e4d92078-4b95-4445-92bc-c31138841286.ttl  manifest.json
test/directory-cwlprov-0.6.0/metadata/logs/: engine.cd7ccc4e-661a-4f5d-813a-9bfc7aa3a761.txt
test/directory-cwlprov-0.6.0/metadata/provenance/: primary.cwlprov.json  primary.cwlprov.jsonld  primary.cwlprov.nt  primary.cwlprov.provn  primary.cwlprov.ttl  primary.cwlprov.xml
test/directory-cwlprov-0.6.0/workflow/: packed.cwl  primary-job.json  primary-output.json
test/nested-cwlprov-0.3.0/: tagmanifest-sha512.txt
test/nested-cwlprov-0.3.0/metadata/provenance/: primary.cwlprov.json  primary.cwlprov.provn  primary.cwlprov.ttl  workflow_20compile.0cceeaf6-4109-4f08-940b-f06ac959944a.cwlprov.xml
test/revsort-cwlprov-0.3.0/: manifest-sha1.txt
test/revsort-cwlprov-0.3.0/metadata/: manifest.json
test/revsort-cwlprov-0.3.0/metadata/provenance/: primary.cwlprov.nt  workflow_20compile.0cceeaf6-4109-4f08-940b-f06ac959944a.cwlprov.jsonld  workflow_20compile.0cceeaf6-4109-4f08-940b-f06ac959944a.cwlprov.provn
test/revsort-cwlprov-0.3.0/workflow/: packed.cwl
test/run-01/: bag-info.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
test/run-01/metadata/provenance/: primary.cwlprov.jsonld  primary.cwlprov.xml  workflow_20compile.0cceeaf6-4109-4f08-940b-f06ac959944a.cwlprov.json  (+2 more)
test/sec-wf-cwlprov-0.6.0/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
test/sec-wf-cwlprov-0.6.0/metadata/: manifest.json
test/sec-wf-cwlprov-0.6.0/workflow/: packed.cwl  primary-job.json
test/sec-wf-out-cwlprov-0.6.0/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
test/sec-wf-out-cwlprov-0.6.0/metadata/: manifest.json
test/sec-wf-out-cwlprov-0.6.0/workflow/: packed.cwl  primary-output.json
typeshed/: bagit.pyi
typeshed/arcp/: parse.pyi
typeshed/bdbag/: __init__.pyi  bdbag_api.pyi  bdbag_ro.pyi  bdbagit.pyi
typeshed/bdbag/fetch/auth/: cookies.pyi  (+1 more)
typeshed/prov/: identifier.pyi  model.pyi
typeshed/prov/serializers/: __init__.pyi  provjson.pyi
typeshed/rdflib/: collection.pyi  parser.pyi  paths.pyi  plugin.pyi  query.pyi  serializer.pyi  store.pyi
typeshed/rdflib/namespace/: _BRICK.pyi  _DCAM.pyi  __init__.pyi
typeshed/rdflib/tools/: csv2rdf.pyi  defined_namespace_creator.pyi  rdfpipe.pyi  rdfs2dot.pyi
(+49 files in other folders)
