# © Copyright 2018 Software Freedom Conservancy (SFC)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cwlprov"
version = "0.2.0"
authors = [{name = "Stian Soiland-Reyes", email = "stain@apache.org"}]
# https://orcid.org/0000-0001-9842-9718
license = {text = "Apache License, Version 2.0"}
description = "cwlprov API for Python"
keywords = [
    "cwl",
    "commonwl",
    "prov",
    "cwlprov",
    "provenance",
    "sciworkflows",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: System :: Archiving :: Packaging",
]
requires-python = ">=3.9, <4"
dependencies = [
    "prov >= 1.5.1",
    "bdbag >= 1.4.1",
    "arcp >= 0.2.0",
    "rdflib >= 6, <8",
    "typing_extensions",
    "lxml"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/common-workflow-language/cwlprov-py"

[project.scripts]
cwlprov = "cwlprov.tool:main"

[tool.flake8]
ignore = "E124,E128,E129,E201,E202,E225,E226,E231,E265,E271,E302,E303,F401,E402,E501,W503,E731,F811,F821,F841"
max-line-length = "88"
extend-ignore = "E203, W503"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["contrib"] # docs; tests
namespaces = false

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
force_grid_wrap = "0"
use_parentheses = "True"
line_length = "88"
